# superclick

./: Cargo.toml  README.md  bundler.toml
.github/workflows/: ci.yaml  release.yaml
docs/: index.md
src/: audio_plugin.rs  click_track.rs  error.rs  lib.rs  midi_plugin.rs  other_audio_plugin.rs  package.rs  result.rs
src/click_track/: data.rs  editor.rs  mod.rs  plugin.rs
src/gui_plugin/: editor.rs  mod.rs  plugin.rs
src/music_theory/: mod.rs  time_signature.rs
src/reaclick/: data.rs  display.rs  display_data.rs  editor.rs  mod.rs  params.rs  plugin.rs
src/superclick/: click.rs  editor.rs  mod.rs  params.rs  plugin.rs
xtask/: Cargo.toml
xtask/src/: main.rs
