[package]
authors = ["Richard Cook <rcook@rcook.org>"]
categories = ["multimedia::audio"]
description = "ReaClick - CLAP click track generator plugin"
edition = "2021"
homepage = "https://github.com/rcook/reaclick"
keywords = ["audio", "music"]
license = "MIT"
name = "reaclick"
readme = "README.md"
repository = "https://github.com/rcook/reaclick.git"
version = "0.0.0"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
webbrowser = "0.8.12"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
debug = true
inherits = "release"
strip = "none"
