[package]
authors = ["Richard Cook"]
categories = ["multimedia::audio"]
description = "SuperClick - CLAP click track generator plugin"
edition = "2021"
homepage = "https://rcook.github.io/superclick/"
keywords = ["audio", "music"]
license = "MIT"
name = "superclick"
readme = "README.md"
repository = "https://github.com/rcook/superclick.git"
version = "0.0.10"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
atomic_float = "0.1.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }
webbrowser = "0.8.13"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
debug = true
inherits = "release"
strip = "none"
