[package]
authors = ["Richard Cook"]
categories = ["development-tools::build-utils", "development-tools::cargo-plugins"]
description = "ReaClick xtask"
edition = "2021"
homepage = "https://rcook.github.io/reaclick/"
keywords = ["build-tools"]
license = "MIT"
name = "xtask"
readme = "../README.md"
repository = "https://github.com/rcook/reaclick.git"
version = "0.0.4"

[dependencies]
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug.git" }
